--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/color-mode": "^2.1.2",
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.4",
     "@chakra-ui/theme": "^2.1.3",
     "@emotion/react": "^11.9.3",
